--- a/module_1/apps/counter/counter.yaml
+++ b/module_1/apps/counter/counter.yaml
@@ -20,12 +20,19 @@ apiVersion: v1
 kind: Service
 metadata:
   name: hello
+  namespace: monitoring
 spec:
   selector:
     app: hello
   ports:
-    - protocol: TCP
+    - name: metrics
+      protocol: TCP
       port: 8000
       targetPort: 8000
       nodePort: 30080
+    - name: server
+      protocol: TCP
+      port: 8001
+      targetPort: 8001
+      nodePort: 30081
   type: NodePort
