modified:   apps/6_node-exporter/node-exporter.yaml

--- a/module_1/apps/6_node-exporter/node-exporter.yaml
+++ b/module_1/apps/6_node-exporter/node-exporter.yaml
@@ -21,6 +21,8 @@ kind: Service
 metadata:
   name: node-exporter
   namespace: monitoring
+  #  annotations:
+          #    prometheus.io/scrape: 'true'
 spec:
   selector:
     app: node-exporter
