new file:   ../.gitignore 	new file:   apps/counter_rep_v2.yaml 	new file:   apps/nodes-custom.yaml 	new file:   install_helm_v2.sh 	modified:   prometheus/config_2.yaml 	new file:   prometheus/rules/prometheus-rules.yaml 	new file:   prometheus/svc-monitors/my-svc.yaml

--- a/module_2/prometheus/config_2.yaml
+++ b/module_2/prometheus/config_2.yaml
@@ -26,16 +26,16 @@ prometheus:
         cpu: 100m
         memory: 400Mi
   additionalServiceMonitors: 
-    - name: "pop-prometheus-operator-cloud-app"
+    - name: "pop-prometheus-operator-custom-apps"
       selector:
         matchLabels:
-          app.kubernetes.io/type: cloud-app      
+          app.kubernetes.io/type: custom-app      
       namespaceSelector:
         matchNames: 
           - gnet
       endpoints: 
         - port: http
-          path: /actuator/prometheus
+          path: /
 prometheus-node-exporter:
   resources:
     limits:
