--- a/module_2/prometheus/rules/prometheus-rules.yaml
+++ b/module_2/prometheus/rules/prometheus-rules.yaml
@@ -10,7 +10,7 @@ metadata:
   name: prometheus-nodes-rules
 spec:
   groups:
-    - name: ./my-rules
+    - name: ./my-custom-rules
       rules:
-      - record: NodeNotReady
-        expr: kube_node_status_condition{condition="Ready",status="true"} == 0
+      - record: instance:node_network_received_bytes:rate:sum
+        expr: sum by(instance) (rate(node_network_receive_bytes_total[3m]))
