--- a/module_2/prometheus/config_1.yaml
+++ b/module_2/prometheus/config_1.yaml
@@ -4,6 +4,11 @@ alertmanager:
     global:
       resolve_timeout: 5m
 grafana:
+  service:
+    nodePort: 30800
+    port: 3000
+    targetPort: 3000
+    type: NodePort
   resources:
     limits:
       cpu: 500m
