new file:   prometheus/alertmanager/config.yaml 	modified:   prometheus/config_1.yaml 	deleted:    prometheus/config_2.yaml 	deleted:    prometheus/dashboards/nodes-custom.yaml 	deleted:    prometheus/svc-monitors/custom-app-2.yaml 	deleted:    prometheus/svc-monitors/custom-app-3.yaml

--- a/module_3/prometheus/config_1.yaml
+++ b/module_3/prometheus/config_1.yaml
@@ -1,8 +1,10 @@
 ---
 alertmanager:
-  config:
-    global:
-      resolve_timeout: 5m
+  service:
+    nodePort: 30093
+    type: NodePort
+    port: 9093
+    targetPort: 9093
 grafana:
   service:
     nodePort: 30800
