new file:   alertmanager.yaml 	new file:   am-secret.yaml 	modified:   config.yaml 	modified:   ../config_1.yaml

--- a/module_3/prometheus/config_1.yaml
+++ b/module_3/prometheus/config_1.yaml
@@ -1,5 +1,7 @@
 ---
 alertmanager:
+  alertmanagerSpec:
+    configSecret: "alertmanager-config"
   service:
     nodePort: 30093
     type: NodePort
