--- a/module_3/prometheus/alertmanager/config-2.yaml
+++ b/module_3/prometheus/alertmanager/config-2.yaml
@@ -1,10 +1,10 @@
 global:
   resolve_timeout: 5m
 route:
-  group_by: ['job','service']
+  group_by: ['job','service','cluster']
   group_wait: 2m
-  group_interval: 10m
-  repeat_interval: 12h
+  group_interval: 3m
+  repeat_interval: 4m
   receiver: default
   routes:
          - match:
@@ -13,5 +13,6 @@ route:
 receivers:
 - name: default
 - name: my_mail
-  email_configs:
-  - to: 'kamil.swiechowski.ext@gigaset.com'
+  slack_configs:
+    - api_url: "https://talk.gigaset-devnet.pl/hooks/geu8yf6dp3njfgikp7josw3sto"
+      username: "OPS"
