new file:   api/api-admin-examples 	new file:   api/api-client-examples 	modified:   apps/3_app/id-shots_rep_v2.yaml 	modified:   apps/3_app/id-shots_rep_v3.yaml 	new file:   apps/curl.sh 	modified:   prometheus/config_1.yaml

--- a/module_4/prometheus/config_1.yaml
+++ b/module_4/prometheus/config_1.yaml
@@ -25,6 +25,7 @@ prometheus:
     nodePort: 30090
     type: NodePort
   prometheusSpec:
+    enableAdminAPI: true
     externalLabels:
        cluster: kind
     resources:
