--- a/module_4/apps/3_app/id-shots_rep_v3.yaml
+++ b/module_4/apps/3_app/id-shots_rep_v3.yaml
@@ -14,12 +14,12 @@ spec:
     metadata:
       labels:
         app: labels
-        moreLabels: yesPlease
+        moreLabels: yesPlease2
         app.kubernetes.io/type: custom-app
     spec:
       containers:
       - name: hello-labels
-        image: swiechkamil/id-shots:2
+        image: swiechkamil/id-shots:1
         resources:
           limits:
             memory: "200Mi"
